pets-spring/k8s/resources-dev.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: pets-spring-app
  labels:
    app: pets-spring-app
    group: micro-pet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pets-spring-app
      group: micro-pet
  template:
    metadata:
      labels:
        app: pets-spring-app
        group: micro-pet
    spec:
      containers:
        - name: pets
          image: registry.local:5000/micropet/pets-spring:latest
          imagePullPolicy: Always
          ports:
            - name: pets
              containerPort: 8081
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: pets-spring-service
  labels:
    app: pets-spring-app
    group: micro-pet
spec:
  ports:
    - protocol: TCP
      name: pets
      port: 8081
  selector:
    app: pets-spring-app
    group: micro-pet
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pets-ingress  
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`pets-spring.dev.pet-cluster.demo`)
    kind: Rule
    services:
    - name: pets-spring-service
      port: 8081
